fixing background on safari

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@ body {
   height: auto;
   min-height: 100vh;
   scroll-behavior: smooth;
-  background-image: linear-gradient(to top, #e9b787 0%, #676dc7 100%);
+  background: linear-gradient(to top, #e9b787 0%, #676dc7 100%);
 }
 
 a {
