--- a/styles/weatherInfo.module.scss
+++ b/styles/weatherInfo.module.scss
@@ -91,8 +91,3 @@
   width: 20px;
   height: auto;
 }
-
-.north-west {
-    width: 20px;
-  height: auto;
-}
